# Modolumia

./: .gitignore  Cargo.toml  README.md
frontend/: package.json  webpack.config.js
frontend/public/: index.html
frontend/src/: index.tsx  palette.tsx
src/: main.rs
src/api/: mod.rs  palettes.rs
src/database/: document_types.rs  manager.rs  mod.rs  search.rs
src/util/: http_client.rs  logging.rs  mod.rs  uuid.rs
