[package]
name = "modolumia"
version = "0.1.0"
authors = ["maddymakesgames <madelinemakesgames@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.0.0-beta.3"
actix-http = "2.0.0-beta.3"
actix-files = "0.3.0-beta.1"
rand = "0.7.3"
dotenv = "0.15.0"
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0"
tokio = "0.2.22"
base64 = "0.12.3"
log = "0.4.11"
log4rs = "0.13.0"
chrono = "0.4.15"
listenfd = "0.3"


[target.'cfg(unix)'.dependencies]
termion = "1.5.5"